# evm-benchmark

./: Cargo.toml  README.md
benches/: hash.rs  my_benchmark.rs  sender_recovery_bench.rs
docs/: merklelization.md
src/: example.rs
