[package]
name = "evm-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
revm = "30.1.0"
sha3 = "0.10"
rand = "0.9.2"


[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "hash"
path = "benches/hash.rs"
harness = false


[[bench]]
name = "my_benchmark"
path = "benches/my_benchmark.rs"
harness = false