[package]
name = "evm-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
revm = "30.1.0"
sha3 = "0.10"
rand = "0.9.2"
rayon = { version = "1.2", default-features = false }


[dev-dependencies]
criterion = "0.5"
alloy-primitives = { version = "1.3.1", default-features = false }

[[bench]]
name = "hash"
path = "benches/hash.rs"
harness = false


[[bench]]
name = "my_benchmark"
path = "benches/my_benchmark.rs"
harness = false

[[bench]]
name = "sender_recovery"
path = "benches/sender_recovery_bench.rs"
harness = false
